sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: Missing closing brace `}' assumed here
def cocktailSort() {
^AlgCocktailSort1:18: error: Missing closing brace `}' assumed here
		for (j<-a-2 to 0) {if (plusPetit(i,i+1)) {echange(i,i+1); b=true }
                ^